update model training notebook

--- a/source/train.ipynb
+++ b/source/train.ipynb
@@ -53,7 +53,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !python train.py --img 1920 --batch 4 --epochs 25 --data ../dataset.yaml --weights yolov5s.pt --device 0"
+    "# !python train.py --img 640 --batch 4 --epochs 25 --data ../dataset.yaml --weights yolov5s.pt --device 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14e0cda0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python train.py --img 1920 --batch 2 --epochs 25 --data ../dataset.yaml --weights ../../models/v0.pt --device 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f9fbd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python train.py --img 1920 --batch 2 --epochs 25 --freeze 10 --data ../dataset.yaml --weights ../../models/v0.pt --device 0"
    ]
   }
  ],
